# sample_c

./: .gitlab-ci.yml  README.md
.github/workflows/: wf_hworld.yml
code_c/: CMakeLists.txt  Makefile  hworld.c
code_c/tdd/: CMakeLists.txt  Makefile  ut_hworld.cpp  ut_main.cpp
code_py/: .gitignore  README.md  hworld.py  test_hworld.py
code_py/test/: test_hworld.py
tdd/: Makefile  ut_hworld.cpp
